--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <html>
   <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href='https://fonts.googleapis.com/css?family=PT Sans' rel='stylesheet'>
     <link href='https://fonts.googleapis.com/css?family=PT Serif' rel='stylesheet'>
     <link href='https://fonts.googleapis.com/css?family=PT Sans Narrow' rel='stylesheet'>
@@ -69,7 +70,7 @@
       <br>
       ADDRESS
       <a>1234 Imaginary Ln.<br>
-      St. Louis, MO 63101</a></h3>
+      <div class="tab">St. Louis, MO 63101</div></a></h3>
     </div>
   </div>
 
