--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <div class='main'>
       <h1>Get Some Serious Cat-titude</h1>
 
-      <div class=mainh3>
+      <div class='mainh3'>
       <h3>Kat's Costume Shop is your one stop shop to finding the
       best of the best cat costumes and apparel. We offer a wide
       variety of hats, sweaters, shirts, masks, sunglasses, onesies,
