--- a/index.html
+++ b/index.html
@@ -19,7 +19,11 @@
       </ul>
     </div>
 
-<img src="assets/images/kats-hero.jpg" class="img" />
+<img src="assets/images/kats-hero.jpg" class="webimg" />
+<img src="assets/images/kats-hero1.jpg" class="resimg1" />
+<img src="assets/images/kats-hero2.png" class="resimg2" />
+<img src="assets/images/kats-hero-mobile1.jpg" class="mobile1" />
+<img src="assets/images/kats-hero-mobile2.png" class="mobile2" />
 
     <div class='main'>
       <h1>Get Some Serious Cat-titude</h1>
