Fixed all but cat image

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <body>
     <div class='nav'>
       <ul>
-        <li style='float:left'><h1>Kat's Costume Shop</h1></li>
+        <li class="logo"><h1>Kat's Costume Shop</h1></li>
         <li><a href='#contact'>Contact</a></li>
         <li><a href='#about'>About</a></li>
       </ul>
@@ -25,7 +25,7 @@
 <img src="assets/images/kats-hero-mobile1.jpg" class="mobile1" />
 <img src="assets/images/kats-hero-mobile2.png" class="mobile2" />
 
-    <div class='main'>
+    <div class='main' id='about'>
       <h1>Get Some Serious Cat-titude</h1>
 
       <div class='mainh3'>
@@ -57,7 +57,7 @@
   <img src="assets/images/kats-cat3.jpg" height="250px" width="250px" class=img3 />
 
 
-  <div class='git'>
+  <div class='git' id='contact'>
       <h1>Get In Touch</h1>
 
     <div class='business'>
@@ -81,7 +81,7 @@
 <img src="assets/images/kats-map.jpg" class='map' />
 
 <div class='footer'>
-  Kat's Costume Shop
+  <h1>Kat's Costume Shop</h1>
 </div>
   </div>
   </body>
